--- a/JavaScript/InvoiceCalculator/style.css
+++ b/JavaScript/InvoiceCalculator/style.css
@@ -26,12 +26,13 @@ body {
   justify-content: left;
   background-color: #fff;
   width: 60%;
-  height: 80%;
-}
+  height: auto;
+flex-shrink: inherit;}
 
 input {
   width: 70%;
   display: flex;
+  flex-direction: row;
 }
 
 button {
@@ -39,7 +40,7 @@ button {
   border: none;
   color: white;
   padding: 15px 32px;
-  animation: infinite;
+
 }
 
 button:hover {
